# NetworkCalculator

./: .gitignore  CMakeLists.txt  README.md  build.sh  calc.cpp  calc.hpp  client.cpp  create_db.sql  handling.hpp  interactions.cpp  interactions.hpp  login_db.txt  server.cpp
functions/: handling.cpp  interactions.cpp  interactions.hpp
